--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -57,80 +57,82 @@
           </svg>
         </label>
       </div>
-      <ul class="nav_list" >
-        <li class="header_menu-tablet">
-          <svg width="148" height="24" viewBox="0 0 148 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g filter="url(#filter0_i_8835_46365)">
-              <path d="M8.3395 13.771L8.23982 13.7379L8.0737 13.7048L8.04437 13.6972C7.27338 13.4969 5.86403 13.1308 4.55184 12.2483C2.69123 11.0234 1.66125 9.23586 1.56158 7.01793C1.4619 5.16414 2.05996 3.54207 3.25606 2.28414C4.98376 0.496552 7.47564 0 8.67175 0C12.0547 0 13.9478 1.22048 15.64 2.31142L15.649 2.31724L16.4132 2.81379L13.9878 6.7531L13.1571 6.22345L13.1222 6.20101C11.6469 5.25366 10.6826 4.63448 8.67175 4.63448C8.37272 4.63448 7.20984 4.86621 6.61179 5.49517C6.41244 5.69379 6.17986 6.05793 6.21309 6.81931C6.24632 8.01104 7.07694 8.6731 9.20335 9.20276C9.46914 9.26896 9.66849 9.33517 9.86784 9.40138C12.0939 10.1628 13.8216 11.189 15.0177 12.48C16.2138 13.8041 16.8451 15.36 16.8451 17.0152C16.8451 18.6372 16.1474 20.3255 14.9845 21.6166C13.6223 23.1393 11.7285 24 9.63527 24C8.6053 24 7.20984 23.9338 5.54859 23.4372C3.45541 22.7752 1.5948 21.6166 0 19.9283L3.38896 16.7503C5.84761 19.3655 8.6053 19.3655 9.63527 19.3655C11.5623 19.3655 12.1936 17.611 12.1936 17.0152C12.1936 15.7572 10.7649 14.5986 8.3395 13.771Z" fill="url(#paint0_linear_8835_46365)"/>
-              <path d="M31.6196 0.331034H47.1357V4.96552H36.2711V9.23586H45.2419V13.8703H36.2711V23.5366H31.6196V0.331034Z" fill="url(#paint1_linear_8835_46365)"/>
-              <path d="M62.4281 0.331034H77.9442V4.96552H62.4281V0.331034Z" fill="url(#paint2_linear_8835_46365)"/>
-              <path d="M75.2862 13.9035H62.4281V9.26897H75.2862V13.9035Z" fill="url(#paint3_linear_8835_46365)"/>
-              <path d="M77.8445 23.5366H62.4281V18.9021H77.8445V23.5366Z" fill="url(#paint4_linear_8835_46365)"/>
-              <path d="M104.813 7.28276C104.813 5.99172 103.783 4.93241 102.487 4.93241H98.0347V23.5035H93.3832V0.297931H102.487C106.341 0.297931 109.464 3.44276 109.464 7.28276C109.464 10.0966 107.803 12.5131 105.377 13.6055L109.996 23.5366H105.045L100.693 14.2345V9.6H102.487C103.783 9.6 104.813 8.57379 104.813 7.28276Z" fill="url(#paint5_linear_8835_46365)"/>
-              <path d="M123.26 23.5366L135.121 0.331034H136.483L147.481 23.5366H142.331L140.782 20.2497H135.054V16.2915H138.917L135.686 9.43448L128.476 23.5366H123.26Z" fill="url(#paint6_linear_8835_46365)"/>
-            </g>
-            <defs>
-              <filter id="filter0_i_8835_46365" x="0" y="0" width="148.2" height="26.5671" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                <feOffset dx="0.715292" dy="2.86117"/>
-                <feGaussianBlur stdDeviation="1.28355"/>
-                <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
-                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.5 0"/>
-                <feBlend mode="normal" in2="shape" result="effect1_innerShadow_8835_46365"/>
-              </filter>
-              <linearGradient id="paint0_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint1_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint2_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint3_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint4_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint5_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-              <linearGradient id="paint6_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2E2E31"/>
-                <stop offset="1" stop-color="#18181A"/>
-              </linearGradient>
-            </defs>
-          </svg>
-          <span class="close_menu">&#10006;</span>
-        </li>
-        <li class="nav_list-item"><a class="nav_list-link " href="../index.html">Главная</a></li>
-        <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
-        <li class="nav_list-item"><a class="nav_list-link active" href="#">Скачать</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
-        <li class="download_button-tablet">
-          <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="../assets/img/buttons/button-image.svg"> Скачать на Android </a>
-          <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="../assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
-        </li>
-        <li class="link_tablet-menu" >
-          <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-        </li>
-      </ul>
+      <div class="nav_list">
+        <ul class="nav_list-elements" >
+          <li class="header_menu-tablet">
+            <svg width="148" height="24" viewBox="0 0 148 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_i_8835_46365)">
+                <path d="M8.3395 13.771L8.23982 13.7379L8.0737 13.7048L8.04437 13.6972C7.27338 13.4969 5.86403 13.1308 4.55184 12.2483C2.69123 11.0234 1.66125 9.23586 1.56158 7.01793C1.4619 5.16414 2.05996 3.54207 3.25606 2.28414C4.98376 0.496552 7.47564 0 8.67175 0C12.0547 0 13.9478 1.22048 15.64 2.31142L15.649 2.31724L16.4132 2.81379L13.9878 6.7531L13.1571 6.22345L13.1222 6.20101C11.6469 5.25366 10.6826 4.63448 8.67175 4.63448C8.37272 4.63448 7.20984 4.86621 6.61179 5.49517C6.41244 5.69379 6.17986 6.05793 6.21309 6.81931C6.24632 8.01104 7.07694 8.6731 9.20335 9.20276C9.46914 9.26896 9.66849 9.33517 9.86784 9.40138C12.0939 10.1628 13.8216 11.189 15.0177 12.48C16.2138 13.8041 16.8451 15.36 16.8451 17.0152C16.8451 18.6372 16.1474 20.3255 14.9845 21.6166C13.6223 23.1393 11.7285 24 9.63527 24C8.6053 24 7.20984 23.9338 5.54859 23.4372C3.45541 22.7752 1.5948 21.6166 0 19.9283L3.38896 16.7503C5.84761 19.3655 8.6053 19.3655 9.63527 19.3655C11.5623 19.3655 12.1936 17.611 12.1936 17.0152C12.1936 15.7572 10.7649 14.5986 8.3395 13.771Z" fill="url(#paint0_linear_8835_46365)"/>
+                <path d="M31.6196 0.331034H47.1357V4.96552H36.2711V9.23586H45.2419V13.8703H36.2711V23.5366H31.6196V0.331034Z" fill="url(#paint1_linear_8835_46365)"/>
+                <path d="M62.4281 0.331034H77.9442V4.96552H62.4281V0.331034Z" fill="url(#paint2_linear_8835_46365)"/>
+                <path d="M75.2862 13.9035H62.4281V9.26897H75.2862V13.9035Z" fill="url(#paint3_linear_8835_46365)"/>
+                <path d="M77.8445 23.5366H62.4281V18.9021H77.8445V23.5366Z" fill="url(#paint4_linear_8835_46365)"/>
+                <path d="M104.813 7.28276C104.813 5.99172 103.783 4.93241 102.487 4.93241H98.0347V23.5035H93.3832V0.297931H102.487C106.341 0.297931 109.464 3.44276 109.464 7.28276C109.464 10.0966 107.803 12.5131 105.377 13.6055L109.996 23.5366H105.045L100.693 14.2345V9.6H102.487C103.783 9.6 104.813 8.57379 104.813 7.28276Z" fill="url(#paint5_linear_8835_46365)"/>
+                <path d="M123.26 23.5366L135.121 0.331034H136.483L147.481 23.5366H142.331L140.782 20.2497H135.054V16.2915H138.917L135.686 9.43448L128.476 23.5366H123.26Z" fill="url(#paint6_linear_8835_46365)"/>
+              </g>
+              <defs>
+                <filter id="filter0_i_8835_46365" x="0" y="0" width="148.2" height="26.5671" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                  <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                  <feOffset dx="0.715292" dy="2.86117"/>
+                  <feGaussianBlur stdDeviation="1.28355"/>
+                  <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.5 0"/>
+                  <feBlend mode="normal" in2="shape" result="effect1_innerShadow_8835_46365"/>
+                </filter>
+                <linearGradient id="paint0_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint1_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint2_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint3_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint4_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint5_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+                <linearGradient id="paint6_linear_8835_46365" x1="73.7405" y1="0" x2="73.7405" y2="24" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#2E2E31"/>
+                  <stop offset="1" stop-color="#18181A"/>
+                </linearGradient>
+              </defs>
+            </svg>
+            <span class="close_menu">&#10006;</span>
+          </li>
+          <li class="nav_list-item "><a class="nav_list-link " href="../index.html">Главная</a></li>
+          <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
+          <li class="nav_list-item active"><a class="nav_list-link" href="#">Скачать</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
+          <li class="download_button-tablet">
+            <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
+            <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+          </li>
+          <li class="link_tablet-menu" >
+            <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
+            <a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+            <a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
+            <a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
+            <a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+          </li>
+        </ul>
+      </div>
       <div class="langs">
         <img src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
